task_3-4/pghero/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pghero-service
spec:
  selector:
    app: pghero
  ports:
    - port: 5000
      targetPort: 5000
