task_3-4/pghero/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pghero-ingress
  annotations:
spec:
  rules:
    - host: pghero.local
      http:
        paths:        
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: pghero-service
                port:
                  number: 5000
